samples/_failures_safe/1761215038_1ece88_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_11f720a3.c: In function ‘process_compression’:
./samples/SAFE/__tmp_11f720a3.c:143:24: error: missing terminating " character
  143 |                 printf("Verification: SUCCESS
      |                        ^~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_11f720a3.c:143:17: error: expected expression at end of input
  143 |                 printf("Verification: SUCCESS
      |                 ^~~~~~
./samples/SAFE/__tmp_11f720a3.c:143:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_11f720a3.c:143:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_11f720a3.c:143:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_11f720a3.c:143:17: error: expected declaration or statement at end of input
